2008-10-05  Tom Tromey  <tromey@redhat.com>

	* fold-const.c (fold_unary): Rename 'and' to 'and_expr'.

2008-10-05  Tom Tromey  <tromey@redhat.com>

	* sel-sched.c (move_op_hooks, fur_hooks): Mark forward
	declarations 'extern'.
	* regstat.c (regstat_n_sets_and_refs): Remove duplicate.
	* haifa-sched.c (sched_scan_info): Remove duplicate.

2008-10-05  Tom Tromey  <tromey@redhat.com>

	* cgraph.h (struct inline_summary): Move to top level.
	(cgraph_local_info): Update.
	* target.h (struct asm_out): Move to top level.
	(struct asm_int_op): Likewise.
	(struct sched): Likewise.
	(struct vectorize): Likewise.
	(struct calls): Likewise.
	(struct c): Likewise.
	(struct cxx): Likewise.
	(struct emutls): Likewise.
	(struct target_option_hooks): Likewise.
	(struct gcc_target): Update.
	* matrix-reorg.c (struct free_info): Move to top level.
	(struct matrix_info): Update.
	* tree-eh.c (struct goto_queue_node): Move to top level.
	(struct leh_tf_state): Update.
	* sched-int.h (struct deps_reg): Move to top level.
	(enum post_call_value): Likewise.  Give name.
	(struct deps): Update.
	* cse.c (struct branch_path): Move to top level.
	(struct cse_basic_block_data): Update.

2008-10-05  Tom Tromey  <tromey@redhat.com>

	* sdbout.c (sdb_debug_hooks): Initialize.
	* ggc-page.c (ggc_pch_write_object): Initialize emptyBytes.

2008-09-19  Tom Tromey  <tromey@redhat.com>

	* gimple.h (gimple_cond_code): Cast result to tree_code.

2008-09-19  Tom Tromey  <tromey@redhat.com>

	* tree-flow.h (struct ptr_info_def) <escape_mask>: Now unsigned
	int.
	(struct var_ann_d) <escape_mask>: Likewise.

2008-09-19  Tom Tromey  <tromey@redhat.com>

	* tree.c (tree_range_check_failed): Use 'int' to iterate.
	(omp_clause_range_check_failed): Likewise.
	(build_common_builtin_nodes): Likewise.
	* sel-sched.c (init_hard_regs_data): Use 'int' to iterate.
	* regclass.c (cannot_change_mode_set_regs): Use 'int' to iterate.
	(invalid_mode_change_p): Likewise.