@@ -1321,7 +1321,12 @@ iterate_fix_dominators (enum cdi_direction dir, VEC (basic_block, heap) *bbs,
 	}
     }
   for (y = 0; y < g->n_vertices; y++)
-    BITMAP_FREE (g->vertices[y].data);
+    {
+      /* Strange contortions for C++ compilation.  */
+      bitmap b = (bitmap) g->vertices[y].data;
+      BITMAP_FREE (b);
+      g->vertices[y].data = NULL;
+    }
   pointer_map_destroy (map);
 
   /* Find the dominator tree of G.  */
